tests/final/expect/15__torture__malformed_unbalanced_block_no_crash.diag
Diagnostics:
Error: expected '}' at line 0
Error at (1:0): Control reaches end of non-void function 'main'
